force-app/main/default/objects/Opportunity/fields/Total_Forecast_GP__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_GP__c</fullName>
    <description>This field calculates the Expected Forecast GP. This is calculated by using the Total Contract GP value and multiplying this by the stage probability and then the Win Probability.</description>
    <formula>(Total_Contract_GP__c  *  Probability)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the Expected Forecast GP. This is calculated by using the Total Contract GP value and multiplying this by the stage probability and then the Win Probability.</inlineHelpText>
    <label>Total Forecast GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>