force-app/main/default/objects/Opportunity/fields/Total_Forecast_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Revenue__c</fullName>
    <description>This field calculates the Expected Forecast Turnover. It uses the Expected Total Contract Revenue  and multiplies this by the Stage % and then the Win Probability %</description>
    <formula>Total_Contract_Value__c  *  Probability  *  Win_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the Expected Forecast Turnover. It uses the Expected Total Contract Revenue  and multiplies this by the Stage % and then the Win Probability %</inlineHelpText>
    <label>Total Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>