force-app/main/default/objects/Opportunity/fields/Total_Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_Amount__c</fullName>
    <formula>Bronze_Maintenance_Amount__c + Gold_Maintenace_Amount__c + Silver_Maintenance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Maintenance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>