force-app/main/default/objects/Opportunity/fields/UTM__c.field-meta.xml
<CustomField>
    <fullName>UTM__c</fullName>
    <inlineHelpText>This is the UTM tracker reference of the Opportunity. UTMs can show Traffic source, medium, campaign name, content and keyword terms.</inlineHelpText>
    <label>UTM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>