force-app/main/default/objects/Opportunity/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <description>Probability of Winning /Closing the Opportunity</description>
    <inlineHelpText>Probability of Winning/Closing the Opportunity.30% negotation stage, 50% 1in2 chance of winning, 70% verbal agreement, 90% awaiting signed paperwork</inlineHelpText>
    <label>Win Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>