force-app/main/default/objects/Opportunity/fields/Zendesk_Order__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zendesk Order</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>