force-app/main/default/objects/Opportunity/fields/Zendesk_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Ticket_ID__c</fullName>
    <description>Enter the Zendesk ticket ID that relates to this ticket if this opportunity came as a result of this ticket or relates in some way.</description>
    <inlineHelpText>Enter the Zendesk ticket ID that relates to this ticket if this opportunity came as a result of this ticket or relates in some way.</inlineHelpText>
    <label>Zendesk Ticket ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>