force-app/main/default/objects/Opportunity/recordTypes/Channel.recordType-meta.xml
<RecordType>
    <fullName>Channel</fullName>
    <active>true</active>
    <businessProcess>Channel</businessProcess>
    <label>Channel</label>
</RecordType>