force-app/main/default/objects/Opportunity/recordTypes/Giganet_Channel_Fibre.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Channel_Fibre</fullName>
    <active>true</active>
    <businessProcess>Giganet Leased Line</businessProcess>
    <label>Giganet Channel Fibre</label>
</RecordType>