force-app/main/default/objects/Opportunity/recordTypes/Giganet_Fibre.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Fibre</fullName>
    <active>true</active>
    <businessProcess>Giganet Leased Line</businessProcess>
    <description>Giganet Fibre based services</description>
    <label>Giganet Fibre</label>
</RecordType>