force-app/main/default/objects/Opportunity/recordTypes/Giganet_Phones.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Phones</fullName>
    <active>true</active>
    <businessProcess>Giganet Leased Line</businessProcess>
    <label>Giganet Phones</label>
</RecordType>