force-app/main/default/objects/Opportunity/validationRules/Check_account_not_prospect_on_closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_account_not_prospect_on_closed_won</fullName>
    <active>true</active>
    <description>Check that the account is not still prospect if closed won.</description>
    <errorConditionFormula>AND(
   TEXT(Account.Type) = &quot;Prospect&quot;,
   TEXT( StageName ) = &quot;Closed Won&quot;
)</errorConditionFormula>
    <errorMessage>Well done on closing the first deal for this customer. Before closing this opportunity as Closed Won, please set the Account&apos;s Type to be something other than Prospect. You will have to come out of this opportunity and visit the account page to fix this.</errorMessage>
</ValidationRule>