force-app/main/default/objects/Opportunity/validationRules/Close_date_is_not_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_date_is_not_in_the_future</fullName>
    <active>true</active>
    <description>Check that the closed date is not in the future</description>
    <errorConditionFormula>AND(
  CloseDate &gt; TODAY(),
  TEXT( StageName ) = &quot;Closed Won&quot;
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Please ensure that the closed date is not in the future if you have set this to &quot;Closed - Won&quot;.</errorMessage>
</ValidationRule>