force-app/main/default/objects/Opportunity/validationRules/Closed_financial_validation_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_financial_validation_rules</fullName>
    <active>true</active>
    <description>Check that the revenue/profit figures are entered in if the deal is closed.</description>
    <errorConditionFormula>AND( TEXT(StageName) = &quot;Closed Won&quot;, OR(  ISBLANK(Total_Contract_GP__c) , ISBLANK(Total_Contract_Value__c), Total_Contract_Value__c == 0,Total_Contract_GP__c == 0 ) )</errorConditionFormula>
    <errorDisplayField>InstallGross_Profit__c</errorDisplayField>
    <errorMessage>Please ensure that you have completed the contract term (months), and that at least either the one-off or recurring monthly revenue and GP are all completed.</errorMessage>
</ValidationRule>