force-app/main/default/objects/Opportunity/validationRules/Credit_limit_exceeded.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_limit_exceeded</fullName>
    <active>true</active>
    <description>Check that the contract value doesn&apos;t exceed</description>
    <errorConditionFormula>AND(
   OR(
      (Monthly_Contract_Revenue__c *12) &gt;  Account.Contract_Limit__c,
       ISBLANK(Account.Contract_Limit__c),
       Account.Credit_Score__c &lt; 50,
       ISBLANK(Account.Credit_Score__c)
   ),
   OR(
     TEXT(StageName) = &quot;Negotiation&quot;,
     TEXT(StageName) = &quot;Verbal&quot;,
     TEXT(StageName) = &quot;Closed Won&quot;
    ),
    TEXT(Account.Type) = &quot;Prospect&quot;,
    AND(
       (Monthly_Contract_Revenue__c *12) &gt; Account.Contract_Limit_Override__c,
       NOT(ISBLANK(Account.Contract_Limit_Override__c))
    )
)</errorConditionFormula>
    <errorMessage>This is a new customer. This opportunity exceeds the credit limit contract limit, the credit score is below 50, or the credit score/contract limit is blank. Please complete the fields or speak to a manager.</errorMessage>
</ValidationRule>