force-app/main/default/objects/Opportunity/validationRules/Delay_reason_detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Delay_reason_detail</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  TEXT( StageName) = &quot;Delayed&quot;,
  TEXT( Reason_Delayed_Detail__c ) = &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Reason_Delayed_Detail__c</errorDisplayField>
    <errorMessage>Please complete the reason why the opportunity is in delay.</errorMessage>
</ValidationRule>