force-app/main/default/objects/Opportunity/validationRules/Is_description_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_description_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(
TEXT(StageName) = &quot;Closed Won&quot;, 
TEXT(StageName) = &quot;Closed Lost&quot;
), 
ISBLANK(Description)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please enter a description about this opportunity.</errorMessage>
</ValidationRule>