force-app/main/default/objects/Opportunity/validationRules/Lead_Source_is_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(RecordType.DeveloperName = &quot;Giganet_Channel_Fibre&quot;),
OR(
AND( 
TEXT(StageName) = &quot;Closed Won&quot;,  
OR(
TEXT(LeadSource) = &quot;Incomplete&quot;,
ISBLANK(TEXT(LeadSource)) 
))

))</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Please complete lead source.</errorMessage>
</ValidationRule>