force-app/main/default/objects/Opportunity/validationRules/Opportunity_name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_name_validation</fullName>
    <active>true</active>
    <description>Opportunity name validation</description>
    <errorConditionFormula>FIND(&apos;/&apos;, Name)  &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please ensure the opportunity name does not contain a forward slash [/] otherwise the Y drive folder creation process will fail.</errorMessage>
</ValidationRule>