force-app/main/default/objects/Opportunity/validationRules/Other_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>and(
INCLUDES( Requirements__c , &quot;Other&quot;),
ISBLANK( Other_req__c ))</errorConditionFormula>
    <errorDisplayField>Other_req__c</errorDisplayField>
    <errorMessage>Please enter Other Requirements</errorMessage>
</ValidationRule>