force-app/main/default/objects/Opportunity/validationRules/Previous_Opportunity_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Previous_Opportunity_Renewal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK( Previous_Opportunity__c ),
TEXT( StageName ) = &quot;Closed Won&quot;,
TEXT( Type ) &lt;&gt; &quot;New Business&quot;,
OR( 
ISBLANK( Previous_Opportunity__c ),
TEXT( StageName ) = &quot;Closed Won&quot;,
TEXT( Type ) &lt;&gt; &quot;AMC&quot;
))</errorConditionFormula>
    <errorDisplayField>Previous_Opportunity__c</errorDisplayField>
    <errorMessage>Please add the previous opportunity into the lookup field</errorMessage>
</ValidationRule>