force-app/main/default/objects/Opportunity/validationRules/Reason_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  TEXT(StageName) = &quot;Closed Lost&quot;,
  ISBLANK( Reason_Lost__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_Lost__c</errorDisplayField>
    <errorMessage>Please enter the reason the deal was Lost</errorMessage>
</ValidationRule>