force-app/main/default/objects/Opportunity/validationRules/Zendesk_Ticket_ID_is_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Zendesk_Ticket_ID_is_number</fullName>
    <active>true</active>
    <description>Check that the zendesk ticket ID is actually a number</description>
    <errorConditionFormula>NOT(ISBLANK(Zendesk_Ticket_ID__c)) &amp;&amp; NOT(ISNUMBER( Zendesk_Ticket_ID__c ))</errorConditionFormula>
    <errorMessage>Zendesk ticket ID must be a number</errorMessage>
</ValidationRule>