force-app/main/default/objects/Opportunity/listViews/Outstanding_Opportunities.listView-meta.xml
<ListView>
    <fullName>Outstanding_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contract_Term__c</columns>
    <columns>Total_Contract_GP__c</columns>
    <columns>Total_Contract_Value__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>Win_Probability__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Outstanding Opportunities</label>
</ListView>