force-app/main/default/objects/Opportunity/listViews/Team_Opps.listView-meta.xml
<ListView>
    <fullName>Team_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Total_Contract_GP__c</columns>
    <columns>BANT_Rating__c</columns>
    <columns>BANT_Completion__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notContain</operation>
        <value>Closed Lost,Closed Won</value>
    </filters>
    <label>Team Open Opportunities</label>
</ListView>